tests/ui/derive/value_and_allowed_conflict.rs
use clapfig::Schema;

#[derive(Schema)]
struct Conflict {
    #[clapfig(value, allowed = ["a", "b"])]
    field: String,
}

fn main() {}
